--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Booze and Building | What will you build today?</title>
     <style>
+      body { margin: 0px; }
       #circle-bg { width: 100%; height: 100%; position: absolute; top: 0; overflow: hidden; text-align: center; background-color: #F9F9F9;}
       #logo { margin-top:20%; width: 400px; }
     </style>
